--- a/composer.json
+++ b/composer.json
@@ -1,1 +1,21 @@
-{\n    \"name\": \"pwardsalford/uos-drupal-form-select-filter\",\n    \"description\": \"Provides an enhanced select form element that duplicates core select functionality\",\n    \"type\": \"drupal-module\",\n    \"license\": \"GPL-2.0-or-later\",\n    \"keywords\": [\"drupal\", \"module\", \"form\", \"select\", \"filter\"],\n    \"homepage\": \"https://github.com/pwardsalford/uos-drupal-form-select-filter\",\n    \"support\": {\n        \"issues\": \"https://github.com/pwardsalford/uos-drupal-form-select-filter/issues\",\n        \"source\": \"https://github.com/pwardsalford/uos-drupal-form-select-filter\"\n    },\n    \"require\": {\n        \"php\": \">=8.1\",\n        \"drupal/core\": \"^10\"\n    },\n    \"require-dev\": {\n        \"drupal/core-dev\": \"^10\"\n    },\n    \"minimum-stability\": \"dev\",\n    \"prefer-stable\": true\n}
+{
+    "name": "pwardsalford/uos-drupal-form-select-filter",
+    "description": "Provides an enhanced select form element that duplicates core select functionality",
+    "type": "drupal-module",
+    "license": "GPL-2.0-or-later",
+    "keywords": ["drupal", "module", "form", "select", "filter"],
+    "homepage": "https://github.com/pwardsalford/uos-drupal-form-select-filter",
+    "support": {
+        "issues": "https://github.com/pwardsalford/uos-drupal-form-select-filter/issues",
+        "source": "https://github.com/pwardsalford/uos-drupal-form-select-filter"
+    },
+    "require": {
+        "php": ">=8.1",
+        "drupal/core": "^10"
+    },
+    "require-dev": {
+        "drupal/core-dev": "^10"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
+}
