--- a/uos_form_select_filter.info.yml
+++ b/uos_form_select_filter.info.yml
@@ -3,3 +3,5 @@ description: 'Provides an enhanced select form element that duplicates core sele
 type: module
 core_version_requirement: ^10
 package: 'Custom'
+dependencies:
+  - drupal:options
